[STYLE] Modularizo archivos CSS importandolos dentro de index.css para una lectura del código más limpia. [FEAT] Creo script para filtro despegable en la versión mobile del shop.

--- a/src/views/admin/edit-item.ejs
+++ b/src/views/admin/edit-item.ejs
@@ -115,14 +115,14 @@
           <div class="create__content">
             <label class="create__label" for="imgFront">
               Imagen Frente:
-              <input class="create__image" type="file" name="imgFront" id="imagenes" />
+              <input class="create__image" type="file" name="imgFront" id="imgFront" />
             </label>
           </div>
 
           <div class="create__content">
             <label class="create__label" for="imgBack">
               Imagen Dorso:
-              <input class="create__image" type="file" name="imgBack" id="imagenes" />
+              <input class="create__image" type="file" name="imgBack" id="imgBack" />
             </label>
           </div>
 
