--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,15 +1,15 @@
 <%- include('../partials/header.ejs') %>
 
     <main>
-      <section class="account container">
-        <h1 class="account__title">INGRESAR A MI CUENTA</h1>
+      <section class="auth container">
+        <h1 class="auth__title">INGRESAR A MI CUENTA</h1>
 
-        <form class="account__form" action="/auth/login" method="POST" enctype="application/x-www-form-urlencoded">
-          <ul class="account__list">
-            <li class="account__content">
-              <label class="account__label" for="email">Email:</label>
+        <form class="auth__form" action="/auth/login" method="POST" enctype="application/x-www-form-urlencoded">
+          <ul class="auth__list">
+            <li class="auth__content">
+              <label class="auth__label" for="email">Email:</label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="email"
                 name="email"
                 id="email"
@@ -18,10 +18,10 @@
               />
             </li>
 
-            <li class="account__content">
-              <label class="account__label" for="password">Contraseña:</label>
+            <li class="auth__content">
+              <label class="auth__label" for="password">Contraseña:</label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="password"
                 name="password"
                 id="password"
@@ -39,26 +39,26 @@
           </ul>
           <% } %>
 
-          <div class="account__enter">
-            <input class="account__button" type="submit" value="Ingresar" />
+          <div class="auth__enter">
+            <input class="auth__button" type="submit" value="Ingresar" />
 
-            <div class="account__checkbox">
+            <div class="auth__checkbox">
               <input
-                class="account__checkbox--input"
+                class="auth__checkbox--input"
                 type="checkbox"
                 name="recordarme"
                 id="recordarme"
               />
-              <label class="account__checkbox--label" for="recordarme">
+              <label class="auth__checkbox--label" for="recordarme">
                 Recordarme
               </label>
             </div>
           </div>
         </form>
 
-        <a class="account__olvidar" href="#">Olvidé mi contraseña</a>
+        <a class="auth__olvidar" href="#">Olvidé mi contraseña</a>
 
-        <a class="account__olvidar" href="/auth/register">
+        <a class="auth__olvidar" href="/auth/register">
           ¿No tienes una cuenta? Regístrate
         </a>
       </section>
