--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -1,18 +1,18 @@
 <%- include('../partials/header.ejs') %>
 
     <main>
-      <section class="account">
-        <h1 class="account__title">CREA TU CUENTA</h1>
-        <p class="account__text">
+      <section class="auth">
+        <h1 class="auth__title">CREA TU CUENTA</h1>
+        <p class="auth__text">
           Completa el formulario para ser parte del mundo de los Funkos
         </p>
 
-        <form class="account__form" action="/auth/register" method="POST" enctype="application/x-www-form-urlencoded">
-          <ul class="account__list">
-            <li class="account__content">
-              <label class="account__label" for="name">Nombre:</label>
+        <form class="auth__form" action="/auth/register" method="POST" enctype="application/x-www-form-urlencoded">
+          <ul class="auth__list">
+            <li class="auth__content">
+              <label class="auth__label" for="name">Nombre:</label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="text"
                 name="name"
                 id="name"
@@ -21,10 +21,10 @@
               />
             </li>
 
-            <li class="account__content">
-              <label class="account__label" for="lastname">Apellido:</label>
+            <li class="auth__content">
+              <label class="auth__label" for="lastname">Apellido:</label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="text"
                 name="lastname"
                 id="lastname"
@@ -33,10 +33,10 @@
               />
             </li>
 
-            <li class="account__content">
-              <label class="account__label" for="email">Email:</label>
+            <li class="auth__content">
+              <label class="auth__label" for="email">Email:</label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="email"
                 name="email"
                 id="email"
@@ -45,10 +45,10 @@
               />
             </li>
 
-            <li class="account__content">
-              <label class="account__label" for="password">Contraseña:</label>
+            <li class="auth__content">
+              <label class="auth__label" for="password">Contraseña:</label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="password"
                 name="password"
                 id="password"
@@ -56,12 +56,12 @@
               />
             </li>
 
-            <li class="account__content">
-              <label class="account__label" for="password__repeat">
+            <li class="auth__content">
+              <label class="auth__label" for="password__repeat">
                 Repita Contraseña:
               </label>
               <input
-                class="account__input"
+                class="auth__input"
                 type="password"
                 name="password__repeat"
                 id="password__repeat"
@@ -78,20 +78,20 @@
           </ul>
           <% } %>
 
-          <div class="account__enter">
-            <input class="account__button" type="submit" value="Registrar" />
+          <div class="auth__enter">
+            <input class="auth__button" type="submit" value="Registrar" />
 
-            <div class="account__checkbox">
+            <div class="auth__checkbox">
               <input
-                class="account__checkbox--input"
+                class="auth__checkbox--input"
                 type="checkbox"
                 name="terminos"
                 id="terminos"
                 required
               />
-              <label class="account__checkbox--label" for="terminos">
+              <label class="auth__checkbox--label" for="terminos">
                 Acepto
-                <a class="account__link" href="#">Términos y Condiciones</a>
+                <a class="auth__link" href="#">Términos y Condiciones</a>
               </label>
             </div>
           </div>
