--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -11,56 +11,26 @@
           <p class="item__license"><%= item.licence_name %></p>
           <h1 class="item__title"><%= item.product_name %></h1>
           <p class="item__description"><%= item.product_description %></p>
-          <p class="item__price"><%= item.price %></p>
+          <p class="item__price">$ <%= item.price %></p>
 
-          <div class="item__carrito--article">
-            <div class="flex">
-              <input class="item__cantidad" placeholder="0" />
-              <div class="amount_buttons">
-                <button class="amount_button increment">+</button>
-                <button class="amount_button decrement">-</button>
+          <form class="item__carrito">
+              <input class="item__cantidad" type="text" placeholder="0" id="quantity" />
+              <div class="item__button--content">
+                <button class="item__button" id="increment">+</button>
+                <button class="item__button" id="decrement">-</button>
               </div>
-            </div>
-            <input
-              class="item__add-cart"
-              type="button"
-              value="Agregar al Carrito"
-            />
-          </div>
+              <input
+                class="item__add-cart"
+                type="button"
+                value="Agregar al Carrito"
+              />
+          </form>
 
-          <a class="item__pago--article" href="#">
+          <a class="item__pago" href="#">
             <span class="item__pago--border">Ver métodos de pago</span> - <%= item.dues %>
             CUOTAS SIN INTERÉS
           </a>
         </article>
-
-        <div class="item__carrito">
-          <div class="flex">
-            <input
-              class="item__cantidad"
-              type="number"
-              name="cantidad-item"
-              id="cantidad-item"
-              placeholder="0"
-            />
-            <div class="amount_buttons">
-              <button class="amount_button increment">+</button>
-              <button class="amount_button decrement">-</button>
-            </div>
-          </div>
-          <input
-            class="item__add-cart"
-            type="button"
-            name="cantidad-button"
-            id="cantidad-button"
-            value="Agregar al Carrito"
-          />
-        </div>
-
-        <a class="item__pago" href="#">
-          <span class="item__pago--border">Ver métodos de pago</span> - <%= item.dues %> CUOTAS
-          SIN INTERÉS
-        </a>
       </section>
 
       <section class="slider container glide">
