[FEAT] Agrego funcionalidad en los botenes + y - de la página de item y correcciones de css y html en item.ejs y shop.ejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -73,7 +73,7 @@
                       <img
                         class="card-item__img--front"
                         src="<%= item.image_front %>"
-                        alt="<%= item.product_description %> BOX"
+                        alt="<%= item.product_description %>"
                       />
                       <img
                         class="card-item__img--back"
