--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -133,7 +133,7 @@
                   <div class="card-item__content">
                     <p class="card-item__license"><%= item.licence_name %></p>
                     <h3 class="card-item__name"><%= item.product_name %></h3>
-                    <p class="card-item__price"><%= item.price %></p>
+                    <p class="card-item__price">$ <%= item.price %></p>
                     <p class="card-item__offer"><%= item.dues %> CUOTAS SIN INTERÉS</p>
                   </div>
                 </a>
