--- a/public/styles/pages/item.css
+++ b/public/styles/pages/item.css
@@ -17,6 +17,10 @@
   .item__img {
     display: flex;
   }
+
+  .item__img img {
+    animation: fade 0.6s;
+  }
   
   .item__content {
     display: flex;
