[FEAT] Configuro Multer como middleware para poder subir archivos. Agrego funcionalidad de Agregar, Editar y Eliminar Items de la base de datos desde el control de administrador con las vistas protegidas Admin, Create Item y Edit Item.

--- a/public/styles/pages/shop.css
+++ b/public/styles/pages/shop.css
@@ -269,6 +269,10 @@
         /* display: grid; */
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .shop__item {
+        min-width: 33%;
+    }
 }
   
 /* ---------- Desktop Screen ---------- */
@@ -379,6 +383,6 @@
     }
 
     .shop__item {
-        min-width: 30%;
+        min-width: 33%;
     }
 }
