--- a/public/styles/pages/cart.css
+++ b/public/styles/pages/cart.css
@@ -82,17 +82,33 @@
   }
   
   .cart-item__cantidad {
-    max-width: 17.5vw;
-    min-width: 10%;
-    padding: var(--spacing-8);
+    padding-bottom: var(--spacing-8);
     justify-self: center;
+    display: flex;
   }
   
-  .cart-item__cantidad input {
-    width: 15vw;
+  .cart-item__quantity {
+    width: 8rem;
     text-align: center;
     font-weight: 700;
-    padding: var(--spacing-4);
+    font-size: var(--font-size-16px);
+  }
+
+  .cart-item__button--content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-2);
+    margin-left: var(--spacing-2);
+  }
+
+  .cart-item__button {
+    width: 2.5rem;
+    font-size: var(--font-size-14px);
+    font-weight: 500;
+    color: var(--color-fuente-claro);
+    background-color: var(--color-fuente-gris);
+    border: none;
+    padding: var(--spacing-2);
   }
   
   .cart-item__total {
@@ -283,18 +299,34 @@
       padding-top: var(--spacing-12);
     }
   
-    .cart-item__cantidad {
-      max-width: auto;
-      /* padding: var(--spacing-8); */
-      /* justify-self: center; */
-    }
-  
-    .cart-item__cantidad input {
-      /* width: 15vw; */
+    /* .cart-item__cantidad {
+      padding-bottom: var(--spacing-8);
+      justify-self: center;
+      display: flex;
+    } */
+    
+    .cart-item__quantity {
+      width: 6rem;
       /* text-align: center; */
       /* font-weight: 700; */
-      /* padding: var(--spacing-4); */
-      max-width: 5rem;
+      /* font-size: var(--font-size-16px); */
+    }
+  
+    /* .cart-item__button--content {
+      display: flex;
+      flex-direction: column;
+      gap: var(--spacing-2);
+      margin-left: var(--spacing-2);
+    } */
+  
+    .cart-item__button {
+      /* width: 2.5rem; */
+      font-size: var(--font-size-16px);
+      /* font-weight: 500; */
+      /* color: var(--color-fuente-claro); */
+      /* background-color: var(--color-fuente-gris); */
+      /* border: none; */
+      /* padding: var(--spacing-2); */
     }
   
     .cart-item__total {
@@ -503,17 +535,38 @@
     }
   
     /* .cart-item__cantidad {
-      max-width: auto;
-      padding: var(--spacing-8);
+      padding-bottom: var(--spacing-8);
       justify-self: center;
-      } */
-  
-    .cart-item__cantidad input {
-      width: 20vw;
+      display: flex;
+    } */
+    
+    .cart-item__quantity {
+      width: 7.5rem;
       /* text-align: center; */
       /* font-weight: 700; */
-      /* padding: var(--spacing-4); */
-      /* max-width: 5rem; */
+      font-size: var(--font-size-20px);
+    }
+  
+    /* .cart-item__button--content {
+      display: flex;
+      flex-direction: column;
+      gap: var(--spacing-2);
+      margin-left: var(--spacing-2);
+    } */
+  
+    .cart-item__button {
+      /* width: 2.5rem; */
+      font-size: var(--font-size-20px);
+      /* font-weight: 500; */
+      /* color: var(--color-fuente-claro); */
+      /* background-color: var(--color-fuente-gris); */
+      /* border: none; */
+      /* padding: var(--spacing-2); */
+      transition: 0.2s ease-in-out;
+    }
+
+    .cart-item__button:hover {
+      background-color: var(--color-primario);
     }
   
     .cart-item__total {
