--- a/src/views/shop/cart.ejs
+++ b/src/views/shop/cart.ejs
@@ -31,17 +31,15 @@
               </div>
 
               <div class="cart-item__cantidad">
-                <div class="flex">
-                  <input class="item__cantidad" placeholder="0" />
-                  <div class="amount_buttons">
-                    <button class="amount_button increment">+</button>
-                    <button class="amount_button decrement">-</button>
-                  </div>
+                <input class="cart-item__quantity quantity" type="text" name="quantity" placeholder="0" />
+                <div class="cart-item__button--content">
+                  <input class="cart-item__button add" type="button" name="add" value="+" />
+                  <input class="cart-item__button subtract" type="button" name="subtract" value="-" />
                 </div>
               </div>
 
               <p class="cart-item__total">
-                $ <span class="value__total"></span>
+                $ <span class="value__total">1799.99</span>
               </p>
 
               <iconify-icon
@@ -68,17 +66,15 @@
               </div>
 
               <div class="cart-item__cantidad">
-                <div class="flex">
-                  <input class="item__cantidad" placeholder="0" />
-                  <div class="amount_buttons">
-                    <button class="amount_button increment">+</button>
-                    <button class="amount_button decrement">-</button>
-                  </div>
+                <input class="cart-item__quantity quantity" type="text" name="quantity" placeholder="0" />
+                <div class="cart-item__button--content">
+                  <input class="cart-item__button add" type="button" name="add" value="+" />
+                  <input class="cart-item__button subtract" type="button" name="subtract" value="-" />
                 </div>
               </div>
 
               <p class="cart-item__total">
-                $ <span class="value__total"></span>
+                $ <span class="value__total">1799.99</span>
               </p>
 
               <iconify-icon
@@ -96,21 +92,21 @@
         <article class="resumen__content">
           <div class="resumen__div">
             <p class="resumen__detail">CANTIDAD DE ELEMENTOS</p>
-            <p class="resumen__value"><span class="resumen_cantidad"></span></p>
+            <p class="resumen__value"><span class="resumen_cantidad">2</span></p>
           </div>
           <div class="resumen__div">
             <p class="resumen__detail">SUBTOTAL</p>
             <p class="resumen__value">
-              $ <span class="resumen_subtotal"></span>
+              $ <span class="resumen_subtotal">3599.98</span>
             </p>
           </div>
           <div class="resumen__div">
             <p class="resumen__detail">ENVIO</p>
-            <p class="resumen__value">$ <span class="resumen_envio"></span></p>
+            <p class="resumen__value">$ <span class="resumen_envio">500.00</span></p>
           </div>
           <div class="resumen__div resumen__total">
             <p class="resumen__detail">TOTAL</p>
-            <p class="resumen__value">$ <span class="resumen_total"></span></p>
+            <p class="resumen__value">$ <span class="resumen_total">4099.98</span></p>
           </div>
         </article>
 
@@ -121,7 +117,7 @@
     <%- include ('../partials/footer.ejs') %>
 
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-    <!-- <script src="/script/carrito.js"></script> -->
+    <script src="/scripts/cart.js"></script>
     <script src="/scripts/menu.js"></script>
   </body>
 </html>
