[FEAT] Agrego renderizado de página para el error 404. Agrego información de login para entrar a las vistas protegidas. Edito readme. [STYLE] Edito banner del home. Edito estructura de la página item/error pasando de flex a grid. Corrijo estructura del código en cada archivo css.

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -21,9 +21,10 @@
 /* -------------------- PAGES -------------------- */
 
 @import url(./pages/home.css);
-@import url(./pages/cart.css);
+@import url(./pages/shop.css);
 @import url(./pages/item.css);
+@import url(./pages/cart.css);
 @import url(./pages/auth.css);
 @import url(./pages/admin.css);
 @import url(./pages/create-edit.css);
-@import url(./pages/shop.css);
+@import url(./pages/error404.css);
