--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -13,8 +13,7 @@
                 type="email"
                 name="email"
                 id="email"
-                placeholder="ejemplo@funkoshop.com"
-                
+                placeholder="admin@gmail.com"
               />
             </li>
 
@@ -25,8 +24,7 @@
                 type="password"
                 name="password"
                 id="password"
-                placeholder="********"
-                
+                placeholder="admin123"
               />
             </li>
           </ul>
