--- a/public/styles/pages/home.css
+++ b/public/styles/pages/home.css
@@ -5,307 +5,332 @@
 /* ----- BANNER ----- */
 
 .banner {
-    background-image: url(../../img/funkos-banner\ 1.svg);
-    background-size: cover;
-    padding: var(--spacing-36) var(--spacing-14);
-  }
+  background-image: url(../../img/funkos-banner\ 1.svg);
+  background-size: cover;
+  padding: var(--spacing-48) var(--spacing-14);
+}
   
-  .banner__content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: var(--spacing-12);
-  }
-  
-  .banner__title {
-    font-family: var(--fuente-alternativa);
-    font-size: var(--font-size-20px);
-    font-weight: 700;
-    color: var(--color-fuente-claro);
-  }
-  
-  .banner__text {
-    font-family: var(--fuente-alternativa);
-    font-size: var(--font-size-14px);
-    font-weight: 400;
-    color: var(--color-fuente-claro);
-  }
-  
-  .banner__link {
-    display: inline-block;
-    font-size: var(--font-size-16px);
-    font-weight: 500;
-    background-color: var(--background-claro);
-    border-radius: 1rem;
-    padding: var(--spacing-8) var(--spacing-36);
-    margin-top: 0.5rem;
-  }
-  
-  /* -------------------- COLECCIONES -------------------- */
-  
-  .home {
-    padding: var(--spacing-14);
-  }
-  
-  .colecciones {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    padding-bottom: var(--spacing-8);
-  }
-  
-  .colecciones:nth-child(2) .colecciones__img {
-    order: -1;
-  }
-  
-  .colecciones__content {
-    display: flex;
-    flex-direction: column;
-    gap: var(--spacing-8);
-  }
-  
-  .colecciones__title {
-    font-family: var(--fuente-alternativa);
-    font-size: var(--font-size-18px);
-    font-weight: 500;
-    text-transform: uppercase;
-  }
-  
-  .colecciones__text {
-    display: none;
-  }
-  
-  .colecciones__line {
-    display: inline-block;
-    border: 1px solid var(--color-primario);
-  }
-  
-  .colecciones__link {
-    display: inline-block;
-    align-self: flex-start;
-    background-color: var(--background-oscuro);
-    border-radius: 1rem;
-    font-size: var(--font-size-14px);
-    padding: var(--spacing-8) var(--spacing-14);
-    font-weight: 500;
-    color: var(--color-fuente-claro);
-  }
+.banner__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: var(--spacing-12);
+}
+
+.banner__title {
+  font-family: var(--fuente-alternativa);
+  font-size: var(--font-size-20px);
+  font-weight: 700;
+  color: var(--color-fuente-claro);
+}
+
+.banner__text {
+  font-family: var(--fuente-alternativa);
+  font-size: var(--font-size-14px);
+  font-weight: 400;
+  color: var(--color-fuente-claro);
+}
+
+.banner__link {
+  display: inline-block;
+  font-size: var(--font-size-16px);
+  font-weight: 500;
+  background-color: var(--background-claro);
+  border-radius: 1rem;
+  padding: var(--spacing-8) var(--spacing-36);
+  margin-top: 0.5rem;
+}
+
+/* -------------------- COLECCIONES -------------------- */
+
+.home {
+  padding: var(--spacing-14);
+}
+
+.colecciones {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  padding-bottom: var(--spacing-8);
+}
+
+.colecciones:nth-child(2) .colecciones__img {
+  order: -1;
+}
+
+.colecciones__content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-8);
+}
+
+.colecciones__title {
+  font-family: var(--fuente-alternativa);
+  font-size: var(--font-size-18px);
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.colecciones__text {
+  display: none;
+}
+
+.colecciones__line {
+  display: inline-block;
+  border: 1px solid var(--color-primario);
+}
+
+.colecciones__link {
+  display: inline-block;
+  align-self: flex-start;
+  background-color: var(--background-oscuro);
+  border-radius: 1rem;
+  font-size: var(--font-size-14px);
+  padding: var(--spacing-8) var(--spacing-14);
+  font-weight: 500;
+  color: var(--color-fuente-claro);
+}
   
 /* ---------- Tablet Screen ---------- */
 
-  @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
+  /* ----- BANNER ----- */
 
-/* ----- BANNER ----- */
-  
-    .banner {
-      /* background-image: url(../../img/funkos-banner\ 1.svg); */
-      /* background-size: cover; */
-      padding: var(--spacing-68) var(--spacing-14);
-    }
-  
-    .banner__content {
-      /* display: flex; */
-      /* flex-direction: column; */
-      /* align-items: flex-start; */
-      gap: 0;
-    }
-  
-    .banner__title {
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-24px);
-      /* font-weight: 700; */
-      /* color: var(--color-fuente-claro); */
-      padding-bottom: var(--spacing-12);
-    }
-  
-    .banner__text {
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-16px);
-      /* font-weight: 400; */
-      /* color: var(--color-fuente-claro); */
-      padding-bottom: var(--spacing-36);
-    }
-  
-    .banner__link {
-      /* display: inline-block; */
-      font-size: var(--font-size-18px);
-      /* font-weight: 500; */
-      /* background-color: var(--background-claro); */
-      /* border-radius: 1rem; */
-      /* padding: var(--spacing-8) var(--spacing-36); */
-      margin-top: 0;
-    }
-  
-/* ----- COLECCIONES ----- */
-  
-    /* .home {
-      padding: var(--spacing-14);
-    } */
-  
-    .colecciones {
-      /* display: grid; */
-      /* grid-template-columns: repeat(2, 1fr); */
-      /* align-items: center; */
-      padding-bottom: var(--spacing-14);
-    }
-  
-    /* .colecciones:nth-child(2) .colecciones__img {
-      order: -1;
-    } */
-  
-    /* .colecciones__content {
-      display: flex;
-      flex-direction: column;
-      gap: var(--spacing-8);
-    } */
-  
-    .colecciones__title {
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-30px);
-      /* font-weight: 500; */
-      /* text-transform: uppercase; */
-    }
-  
-    .colecciones__text {
-      display: inline-block;
-      font-family: var(--fuente-alternativa);
-      font-size: var(--font-size-16px);
-      font-weight: 400;
-      color: var(--color-fuente-gris);
-    }
-  
-    .colecciones__line {
-      /* display: inline-block; */
-      border: 2px solid var(--color-primario);
-      margin: var(--spacing-16) 0 var(--spacing-24);
-    }
-  
-    .colecciones__link {
-      /* display: inline-block; */
-      /* align-self: flex-start; */
-      /* background-color: var(--background-oscuro); */
-      border-radius: 2rem;
-      padding: var(--spacing-16) var(--spacing-36);
-      font-size: var(--font-size-18px);
-      /* font-weight: 500; */
-      /* color: var(--color-fuente-claro); */
-    }
+  .banner {
+    background-image: url(../../img/funkos-banner.webp);
+    /* background-size: cover; */
+    background-attachment: fixed;
+    padding: var(--spacing-68) var(--spacing-14);
+    position: relative;
+  }
+
+  .banner::before {
+    content: '';
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(2px) brightness(.7);
+  }
+
+  .banner__content {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: flex-start; */
+    gap: 0;
+    position: relative;
+  }
+
+  .banner__title {
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-24px);
+    /* font-weight: 700; */
+    /* color: var(--color-fuente-claro); */
+    padding-bottom: var(--spacing-12);
+  }
+
+  .banner__text {
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-16px);
+    /* font-weight: 400; */
+    /* color: var(--color-fuente-claro); */
+    padding-bottom: var(--spacing-36);
+  }
+
+  .banner__link {
+    /* display: inline-block; */
+    font-size: var(--font-size-18px);
+    /* font-weight: 500; */
+    /* background-color: var(--background-claro); */
+    /* border-radius: 1rem; */
+    /* padding: var(--spacing-8) var(--spacing-36); */
+    margin-top: 0;
+  }
+
+  /*  ---- COLECCIONES ----- */
+
+  /* .home {
+    padding: var(--spacing-14);
+  } */
+
+  .colecciones {
+    /* display: grid; */
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* align-items: center; */
+    padding-bottom: var(--spacing-14);
+  }
+
+  /* .colecciones:nth-child(2) .colecciones__img {
+    order: -1;
+  } */
+
+  /* .colecciones__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-8);
+  } */
+
+  .colecciones__title {
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-30px);
+    /* font-weight: 500; */
+    /* text-transform: uppercase; */
+  }
+
+  .colecciones__text {
+    display: inline-block;
+    font-family: var(--fuente-alternativa);
+    font-size: var(--font-size-16px);
+    font-weight: 400;
+    color: var(--color-fuente-gris);
+  }
+
+  .colecciones__line {
+    /* display: inline-block; */
+    border: 2px solid var(--color-primario);
+    margin: var(--spacing-16) 0 var(--spacing-24);
+  }
+
+  .colecciones__link {
+    /* display: inline-block; */
+    /* align-self: flex-start; */
+    /* background-color: var(--background-oscuro); */
+    border-radius: 2rem;
+    padding: var(--spacing-16) var(--spacing-36);
+    font-size: var(--font-size-18px);
+    /* font-weight: 500; */
+    /* color: var(--color-fuente-claro); */
+  }
 }
   
 /* ---------- Desktop Screen ---------- */
   
-  @media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
+  /* ----- BANNER ----- */
 
-    /* ----- BANNER ----- */
+  .banner {
+    /* background-image: url("../../img/funkos-banner\ 1.svg"); */
+    /* background-size: cover; */
+    /* background-attachment: fixed; */
+    padding: var(--spacing-128) var(--spacing-14);
+    /* position: relative; */
+  }
 
-    .banner {
-      /* background-image: url("../../img/funkos-banner\ 1.svg"); */
-      /* background-size: cover; */
-      padding: var(--spacing-128) var(--spacing-14);
-    }
-  
-    /* .banner__content {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 0;
-    } */
-  
-    .banner__title {
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-38px);
-      /* font-weight: 700; */
-      /* color: var(--color-fuente-claro); */
-      /* padding-bottom: var(--spacing-12); */
-    }
-  
-    .banner__text {
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-18px);
-      /* font-weight: 400; */
-      /* color: var(--color-fuente-claro); */
-      /* padding-bottom: var(--spacing-36); */
-    }
-  
-    .banner__link {
-      /* display: inline-block; */
-      /* background-color: var(--background-claro); */
-      /* color: var(--color-fuente-oscuro); */
-      border-radius: 5rem;
-      padding: var(--spacing-12) var(--spacing-68);
-      font-size: var(--font-size-20px);
-      /* font-weight: 500; */
-      /* margin-top: 0; */
-      transition: 0.2s ease-in;
-    }
-  
-    .banner__link:hover {
-        background-color: var(--color-primario);
-        color: var(--color-fuente-claro);
-        box-shadow: 0 0 15px var(--background-oscuro);
-        transform: scale(1.02, 1.02);
-    }
-  
-    /* ----- COLLECIONES ----- */
-  
-    /* .home {
-      padding: var(--spacing-14);
-    } */
-  
-    /* .colecciones {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      align-items: center;
-      padding-bottom: var(--spacing-14);
-    } */
-  
-    /* .colecciones:nth-child(2) .colecciones__img {
-      order: -1;
-    } */
-  
-    /* .colecciones__content {
-      display: flex;
-      flex-direction: column;
-      gap: var(--spacing-8);
-    } */
-  
-    .colecciones__title {
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-46px);
-      /* font-weight: 500; */
-      /* text-transform: uppercase; */
-    }
-  
-    .colecciones__text {
-      /* display: inline-block; */
-      /* font-family: var(--fuente-alternativa); */
-      font-size: var(--font-size-24px);
-      /* font-weight: 400; */
-      /* color: var(--color-fuente-gris); */
-    }
-  
-    /* .colecciones__line {
-      display: inline-block;
-      border: 2px solid var(--color-primario);
-      margin: var(--spacing-16) 0 var(--spacing-24);
-    } */
-  
-    .colecciones__link {
-      /* display: inline-block; */
-      /* align-self: flex-start; */
-      /* background-color: var(--background-oscuro); */
-      /* border-radius: 2rem; */
-      padding: var(--spacing-20) var(--spacing-48);
-      font-size: var(--font-size-24px);
-      /* font-weight: 500; */
-      /* color: var(--color-fuente-claro); */
-      transition: 0.2s ease-in;
-    }
-  
-    .colecciones__link:hover {
+  /* .banner::before {
+    content: '';
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(2px) brightness(.7);
+  } */
+
+  /* .banner__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0;
+    position: relative;
+  } */
+
+  .banner__title {
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-38px);
+    /* font-weight: 700; */
+    /* color: var(--color-fuente-claro); */
+    /* padding-bottom: var(--spacing-12); */
+  }
+
+  .banner__text {
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-18px);
+    /* font-weight: 400; */
+    /* color: var(--color-fuente-claro); */
+    /* padding-bottom: var(--spacing-36); */
+  }
+
+  .banner__link {
+    /* display: inline-block; */
+    /* background-color: var(--background-claro); */
+    /* color: var(--color-fuente-oscuro); */
+    border-radius: 5rem;
+    padding: var(--spacing-12) var(--spacing-68);
+    font-size: var(--font-size-20px);
+    /* font-weight: 500; */
+    /* margin-top: 0; */
+    transition: 0.2s ease-in;
+  }
+
+  .banner__link:hover {
       background-color: var(--color-primario);
+      color: var(--color-fuente-claro);
       box-shadow: 0 0 15px var(--background-oscuro);
       transform: scale(1.02, 1.02);
-
-    }
   }
+
+  /* ----- COLLECIONES ----- */
+
+  /* .home {
+    padding: var(--spacing-14);
+  } */
+
+  /* .colecciones {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    padding-bottom: var(--spacing-14);
+  } */
+
+  /* .colecciones:nth-child(2) .colecciones__img {
+    order: -1;
+  } */
+
+  /* .colecciones__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-8);
+  } */
+
+  .colecciones__title {
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-46px);
+    /* font-weight: 500; */
+    /* text-transform: uppercase; */
+  }
+
+  .colecciones__text {
+    /* display: inline-block; */
+    /* font-family: var(--fuente-alternativa); */
+    font-size: var(--font-size-24px);
+    /* font-weight: 400; */
+    /* color: var(--color-fuente-gris); */
+  }
+
+  /* .colecciones__line {
+    display: inline-block;
+    border: 2px solid var(--color-primario);
+    margin: var(--spacing-16) 0 var(--spacing-24);
+  } */
+
+  .colecciones__link {
+    /* display: inline-block; */
+    /* align-self: flex-start; */
+    /* background-color: var(--background-oscuro); */
+    /* border-radius: 2rem; */
+    padding: var(--spacing-20) var(--spacing-48);
+    font-size: var(--font-size-24px);
+    /* font-weight: 500; */
+    /* color: var(--color-fuente-claro); */
+    transition: 0.2s ease-in;
+  }
+
+  .colecciones__link:hover {
+    background-color: var(--color-primario);
+    box-shadow: 0 0 15px var(--background-oscuro);
+    transform: scale(1.02, 1.02);
+  }
+}
