[FEAT] Agrego manejo de errores para item no existente y para credenciales inválidas en el acceso a las vistas protegidas. Corrijo tipo de input en contact.ejs

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -43,7 +43,7 @@
           </div>
 
           <div class="create__content">
-            <input class="create__button" type="submit" value="Enviar" />
+            <input class="create__button" type="button" value="Enviar" />
             <input class="create__button" type="reset" value="Limpiar" />
           </div>
         </form>
