--- a/src/views/errorAdmin.ejs
+++ b/src/views/errorAdmin.ejs
@@ -7,9 +7,9 @@
         </picture>
 
         <article class="item__content">
-          <p class="item__license">Error 404</p>
-          <h1 class="item__title">¡Lo siento! Página no encontrada.</h1>
-          <p class="item__price">La página que usted está buscando no existe.</p>
+          <p class="item__license">Sin acceso</p>
+          <h1 class="item__title">¡Lo siento! Usted no tiene acceso a esta página.</h1>
+          <p class="item__price">Necesita tener permisos de administrador para acceder.</p>
 
           <div class="item__carrito">
               <a class="item__add-cart" href="/">Ir a la página de inicio</a>
