--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -1,37 +1,56 @@
 <%- include('../partials/header.ejs') %>
 
     <main class="item__page">
-      <section class="item container">
-        <picture class="item__img">
-          <img class="card-item__img--front" src="<%= item.image_front %>" alt="<%= item.product_description %>" />
-          <img class="card-item__img--back" src="<%= item.image_back %>" alt="<%= item.product_description %> BOX" />
-        </picture>
+      <% if (item) { %>
+        <section class="item container">
+          <picture class="item__img">
+            <img class="card-item__img--front" src="<%= item.image_front %>" alt="<%= item.product_description %>" />
+            <img class="card-item__img--back" src="<%= item.image_back %>" alt="<%= item.product_description %> BOX" />
+          </picture>
 
-        <article class="item__content">
-          <p class="item__license"><%= item.licence_name %></p>
-          <h1 class="item__title"><%= item.product_name %></h1>
-          <p class="item__description"><%= item.product_description %></p>
-          <p class="item__price">$ <%= item.price %></p>
+          <article class="item__content">
+            <p class="item__license"><%= item.licence_name %></p>
+            <h1 class="item__title"><%= item.product_name %></h1>
+            <p class="item__description"><%= item.product_description %></p>
+            <p class="item__price">$ <%= item.price %></p>
 
-          <form class="item__carrito">
-              <input class="item__cantidad" type="text" placeholder="0" id="quantity" />
-              <div class="item__button--content">
-                <input class="item__button" type="button" id="add" value="+" />
-                <input class="item__button" type="button" id="subtract" value="-" />
-              </div>
-              <input
-                class="item__add-cart"
-                type="button"
-                value="Agregar al Carrito"
-              />
-          </form>
+            <form class="item__carrito">
+                <input class="item__cantidad" type="text" placeholder="0" id="quantity" />
+                <div class="item__button--content">
+                  <input class="item__button" type="button" id="add" value="+" />
+                  <input class="item__button" type="button" id="subtract" value="-" />
+                </div>
+                <input
+                  class="item__add-cart"
+                  type="button"
+                  value="Agregar al Carrito"
+                />
+            </form>
 
-          <a class="item__pago" href="#">
-            <span class="item__pago--border">Ver métodos de pago</span> - <%= item.dues %>
-            CUOTAS SIN INTERÉS
-          </a>
-        </article>
-      </section>
+            <a class="item__pago" href="#">
+              <span class="item__pago--border">Ver métodos de pago</span> - <%= item.dues %>
+              CUOTAS SIN INTERÉS
+            </a>
+          </article>
+        </section>
+      <% } else { %>
+        <section class="item container">
+          <picture class="error__img">
+            <img class="card-item__img--front" src="/img/spiderman-404.png" alt="Spiderman error." />
+          </picture>
+  
+          <article class="item__content">
+            <p class="item__license">No existe</p>
+            <h1 class="item__title">¡Lo siento! Item no encontrado.</h1>
+            <p class="item__price">El item que usted está solicitando no se encuentra disponible.</p>
+  
+            <div class="item__carrito">
+                <a class="item__add-cart" href="/">Ir a la página de inicio</a>
+            </div>
+          </article>
+        </section>
+      <% } %>
+
 
       <section class="slider container glide">
         <h3 class="slider__title">PRODUCTOS RELACIONADOS</h3>
